--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Breathtaking AI Chatbot</title>
+  <title>AI Chatbot - Your Friendly AI Expert 🤖</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
 </head>
 <body>
   <div class="chat-container">
-    <h1>Breathtaking AI Chatbot 🤖✨</h1>
-    <div id="chat-box"></div>
-    <form id="chat-form">
-      <input
-        type="text"
-        id="user-input"
-        placeholder="Ask me anything..."
-        autocomplete="off"
-        required
-      />
+    <div class="profile">
+      <img src="https://i.imgur.com/7k12EPD.png" alt="Chatbot Profile" />
+      <h2>AI Buddy 🤖</h2>
+      <p>Your friendly AI expert bot — ask me anything about Artificial Intelligence!</p>
+    </div>
+    <div id="chat-box" class="chat-box"></div>
+    <form id="chat-form" class="chat-form">
+      <input type="text" id="user-input" autocomplete="off" placeholder="Type your question here..." />
       <button type="submit">Send</button>
     </form>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
-
